# ai_goolib

./: LICENSE  README.md  pyproject.toml
src/ai_goolib/: core.py  doc.py  prompt.py
